Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50330

Material: wrong toolbar color

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.6.0 Beta
    • Quick: Controls 2
    • None
    • e4334234f7d1151f7467ff9c861a2ba6b294bc14 & 0d7d2ffe4e74ea9d9f482b706cd7d725ddf53092

      With Material theme toolbar has accent color. But this contradicts Material Design specs, as it should be primary color: http://www.google.com/design/spec/style/color.html#color-ui-color-application

      To fix this, primary color should return, see QTBUG-50329.

        For Gerrit Dashboard: QTBUG-50330
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            krnekit Nikita Krupenko
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes