Material: default primary to Indigo & accent to Pink

These colors are used as an example in the Google Material Design
Guidelines, and as defaults in Android Studio app templates.

Change-Id: I6236e4fd388817e05e22ec0b7aadedb3fae68fa1
Task-number: QTBUG-50330
Reviewed-by: Nikita Krupenko <krnekit@gmail.com>
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>